transferring some of the files over

--- a/DEEP_DIVE/Packages/manifest.json
+++ b/DEEP_DIVE/Packages/manifest.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "com.atteneder.gltfast": "https://github.com/atteneder/glTFast.git#v5.0.0",
+    "com.readyplayerme.avatarloader": "https://github.com/readyplayerme/rpm-unity-sdk-avatar-loader.git#v1.1.0",
+    "com.readyplayerme.core": "https://github.com/readyplayerme/rpm-unity-sdk-core.git#v1.2.0",
+    "com.readyplayerme.webview": "https://github.com/readyplayerme/rpm-unity-sdk-webview.git#v1.1.0",
+    "com.unity.animation.rigging": "1.1.1",
     "com.unity.collab-proxy": "2.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
@@ -14,7 +19,10 @@
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.management": "4.2.0",
+    "com.unity.xr.interaction.toolkit": "2.2.0",
+    "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.oculus": "3.2.3",
+    "com.unity.xr.openxr": "1.6.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
